# hallucinationauditor

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  FCL_INTEGRATION_COMPLETE.md  GETTING_STARTED.md  HALLUCINATION_TYPES_MAPPING.md  IMPLEMENTATION_STATUS.md  PROJECT_CONSTITUTION.md  README.md  SUCCESS_SUMMARY.md  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  start.bat  start.ps1  vercel.json
.claude/: settings.local.json
.claude/agents/extractor/: AGENT.md
.claude/agents/retriever/: AGENT.md
.claude/agents/verifier/: AGENT.md
.claude/commands/audit_public/: COMMAND.md
.claude/skills/hallucination-taxonomy/: SKILL.md
.claude/skills/public-source-gating/: SKILL.md
.claude/skills/report-schema/: SKILL.md
api/: __init__.py  index.py  requirements.txt  server.py
cases_in/: README.md
scripts/: __init__.py  build_claims.py  extract_citations.py  extract_text.py  fcl_get_xml.py  fcl_search_atom.py  fetch_url.py  orchestrate.py  parse_authority.py  parse_fcl_xml.py  public_resolve.py  verify_claim.py
scripts/utils/: __init__.py  cache_helpers.py  file_helpers.py  hash_helpers.py  validation.py
tests/: __init__.py  conftest.py  test_extract_text.py
tests/fixtures/: montgomery_test.txt  sample_document.txt  sample_input.json
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
ui/src/lib/: api.ts  citationExtractor.ts  citationResolver.ts  documentParser.ts  index.ts  judgmentParser.ts  verifier.ts
